5.0-beta2
 * Revert switching to approxTime in Dispatcher (CASSANDRA-19454)
 * Add an optimized default configuration to tests and make it available for new users (CASSANDRA-18753)
 * Fix remote JMX under Java17 (CASSANDRA-19453)
 * Avoid consistency violations for SAI intersections over unrepaired data at consistency levels requiring reconciliation (CASSANDRA-19018)
 * Fix NullPointerException in ANN+WHERE when adding rows in another partition (CASSANDRA-19404)
 * Record latencies for SAI post-filtering reads against local storage (CASSANDRA-18940)
 * Fix VectorMemoryIndex#update logic to compare vectors. Fix Index view (CASSANDRA-19168)
 * Deprecate native_transport_port_ssl (CASSANDRA-19392)
 * Update packaging shell includes (CASSANDRA-19283)
 * Fix data corruption in VectorCodec when using heap buffers (CASSANDRA-19167)
 * Avoid over-skipping of key iterators from static column indexes during mixed intersections (CASSANDRA-19278)
 * Make concurrent_index_builders configurable at runtime (CASSANDRA-19266)
 * Fix storage_compatibility_mode for streaming (CASSANDRA-19126)
 * Add support of vector type to cqlsh COPY command (CASSANDRA-19118)
 * Make CQLSSTableWriter to support building of SAI indexes (CASSANDRA-18714)
 * Append additional JVM options when using JDK17+ (CASSANDRA-19001)
 * Upgrade Python driver to 3.29.0 (CASSANDRA-19245)
 * Creating a SASI index after creating an SAI index does not break secondary index queries (CASSANDRA-18939)
 * Optionally fail when a non-partition-restricted query is issued against an index (CASSANDRA-18796)
 * Add a startup check to fail startup when using invalid configuration with certain Kernel and FS type (CASSANDRA-19196)
 * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
 * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
 * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)