@@ -332,7 +332,7 @@ public class LocalSessions
      */
     public void cancelSession(TimeUUID sessionID, boolean force)
     {
-        logger.info("Cancelling local repair session {}", sessionID);
+        logger.debug("Cancelling local repair session {}", sessionID);
         LocalSession session = getSession(sessionID);
         Preconditions.checkArgument(session != null, "Session {} does not exist", sessionID);
         Preconditions.checkArgument(force || session.coordinator.equals(getBroadcastAddressAndPort()),
@@ -407,7 +407,7 @@ public class LocalSessions
                     case FINALIZE_PROMISED:
                         continue;
                     default:
-                        logger.info("Found repair session {} with state = {} - failing the repair", session.sessionID, session.getState());
+                        logger.debug("Found repair session {} with state = {} - failing the repair", session.sessionID, session.getState());
                         failSession(session, true);
                 }
             }
@@ -463,12 +463,12 @@ public class LocalSessions
                     {
                         // if we delete a non-superseded session, some ranges will be mis-reported as
                         // not having been repaired in repair_admin after a restart
-                        logger.info("Skipping delete of FINALIZED LocalSession {} because it has " +
+                        logger.debug("Skipping delete of FINALIZED LocalSession {} because it has " +
                                     "not been superseded by a more recent session", session.sessionID);
                     }
                     else if (!sessionHasData(session))
                     {
-                        logger.info("Auto deleting repair session {}", session);
+                        logger.debug("Auto deleting repair session {}", session);
                         deleteSession(session.sessionID);
                     }
                     else
@@ -756,7 +756,7 @@ public class LocalSessions
                 }
                 else if (session.getState() != FAILED)
                 {
-                    logger.info("Failing local repair session {}", session.sessionID);
+                    logger.debug("Failing local repair session {}", session.sessionID);
                     setStateAndSave(session, FAILED);
                 }
             }
@@ -769,7 +769,7 @@ public class LocalSessions
 
     public synchronized void deleteSession(TimeUUID sessionID)
     {
-        logger.info("Deleting local repair session {}", sessionID);
+        logger.debug("Deleting local repair session {}", sessionID);
         LocalSession session = getSession(sessionID);
         Preconditions.checkArgument(session.isCompleted(), "Cannot delete incomplete sessions");
 
@@ -844,7 +844,7 @@ public class LocalSessions
         sendAck(ctx, message);
         if (!putSessionUnsafe(session))
             return;
-        logger.info("Beginning local incremental repair session {}", session);
+        logger.debug("Beginning local incremental repair session {}", session);
 
         ExecutorService executor = ctx.executorFactory().pooled("Repair-" + sessionID, parentSession.getColumnFamilyStores().size());
 
@@ -859,9 +859,9 @@ public class LocalSessions
             {
                 try
                 {
-                    logger.info("Prepare phase for incremental repair session {} completed", sessionID);
+                    logger.debug("Prepare phase for incremental repair session {} completed", sessionID);
                     if (!prepareSessionExceptFailed(session))
-                        logger.info("Session {} failed before anticompaction completed", sessionID);
+                        logger.debug("Session {} failed before anticompaction completed", sessionID);
                     sendMessageWithRetries(always(), new PrepareConsistentResponse(sessionID, getBroadcastAddressAndPort(), session.getState() != FAILED), PREPARE_CONSISTENT_RSP, coordinator);
                 }
                 finally
@@ -875,7 +875,7 @@ public class LocalSessions
                 try
                 {
                     if (Throwables.anyCauseMatches(t, (throwable) -> throwable instanceof CompactionInterruptedException))
-                        logger.info("Anticompaction interrupted for session {}: {}", sessionID, t.getMessage());
+                        logger.debug("Anticompaction interrupted for session {}: {}", sessionID, t.getMessage());
                     else if (Throwables.anyCauseMatches(t, (throwable) -> throwable instanceof NoSuchRepairSessionException))
                         logger.warn("No such repair session: {}", sessionID);
                     else
@@ -925,7 +925,7 @@ public class LocalSessions
         LocalSession session = getSession(sessionID);
         if (session != null && session.getState() != REPAIRING)
         {
-            logger.info("Setting local incremental repair session {} to REPAIRING", session);
+            logger.debug("Setting local incremental repair session {} to REPAIRING", session);
             setStateAndSave(session, REPAIRING);
         }
     }
@@ -939,7 +939,7 @@ public class LocalSessions
         LocalSession session = getSession(sessionID);
         if (session == null)
         {
-            logger.info("Received FinalizePropose message for unknown repair session {}, responding with failure", sessionID);
+            logger.debug("Received FinalizePropose message for unknown repair session {}, responding with failure", sessionID);
             sendFailureResponse(ctx, message);
             sendMessageWithRetries(new FailSession(sessionID), FAILED_SESSION_MSG, from);
             return;
@@ -961,7 +961,7 @@ public class LocalSessions
             syncTable();
 
             RepairMessage.sendMessageWithRetries(ctx, new FinalizePromise(sessionID, getBroadcastAddressAndPort(), true), FINALIZE_PROMISE_MSG, from);
-            logger.info("Received FinalizePropose message for incremental repair session {}, responded with FinalizePromise", sessionID);
+            logger.debug("Received FinalizePropose message for incremental repair session {}, responded with FinalizePromise", sessionID);
         }
         catch (IllegalArgumentException e)
         {
@@ -1006,7 +1006,7 @@ public class LocalSessions
         sendAck(ctx, message);
 
         if (maybeSetStateAndSave(session, FINALIZE_PROMISED, FINALIZED))
-            logger.info("Finalized local repair session {}", sessionID);
+            logger.debug("Finalized local repair session {}", sessionID);
     }
 
     public void handleFailSessionMessage(InetAddressAndPort from, FailSession msg)
@@ -1017,7 +1017,7 @@ public class LocalSessions
 
     public void sendStatusRequest(LocalSession session)
     {
-        logger.info("Attempting to learn the outcome of unfinished local incremental repair session {}", session.sessionID);
+        logger.debug("Attempting to learn the outcome of unfinished local incremental repair session {}", session.sessionID);
         Message<StatusRequest> request = Message.out(STATUS_REQ, new StatusRequest(session.sessionID));
 
         for (InetAddressAndPort participant : session.participants)
@@ -1042,7 +1042,7 @@ public class LocalSessions
         else
         {
             sendMessage(from, Message.out(STATUS_RSP, new StatusResponse(sessionID, session.getState())));
-            logger.info("Responding to status response message for incremental repair session {} with local state {}", sessionID, session.getState());
+            logger.debug("Responding to status response message for incremental repair session {} with local state {}", sessionID, session.getState());
        }
     }
 
@@ -1062,11 +1062,11 @@ public class LocalSessions
         if (response.state == FINALIZED || response.state == FAILED)
         {
             setStateAndSave(session, response.state);
-            logger.info("Unfinished local incremental repair session {} set to state {}", sessionID, response.state);
+            logger.debug("Unfinished local incremental repair session {} set to state {}", sessionID, response.state);
         }
         else
         {
-            logger.info("Received StatusResponse for repair session {} with state {}, which is not actionable. Doing nothing.", sessionID, response.state);
+            logger.debug("Received StatusResponse for repair session {} with state {}, which is not actionable. Doing nothing.", sessionID, response.state);
         }
     }
 
