@@ -1,4 +1,5 @@
 5.0-beta2
+ * Push LocalSessions info logs to debug (CASSANDRA-18335)
  * Revert switching to approxTime in Dispatcher (CASSANDRA-19454)
  * Add an optimized default configuration to tests and make it available for new users (CASSANDRA-18753)
  * Fix remote JMX under Java17 (CASSANDRA-19453)
